--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ultra-live-electron",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Tencent Cloud Living and Streaming Tool for desktop and laptop",
   "main": "electron.main.js",
   "author": "Tencent Cloud",
@@ -17,7 +17,7 @@
   },
   "dependencies": {
     "@tencentcloud/chat": "latest",
-    "@tencentcloud/tuiroom-engine-electron": "^2.2.2-alpha.0",
+    "@tencentcloud/tuiroom-engine-electron": "2.2.2-alpha.0",
     "core-js": "^3.36.1",
     "pinia": "^2.1.7",
     "trtc-electron-sdk": "11.7.603-alpha.3",
