--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ultra-live-electron",
-  "version": "0.1.6",
+  "version": "0.1.7",
   "description": "Tencent Cloud Living and Streaming Tool for desktop and laptop",
   "main": "main.js",
   "author": "Tencent Cloud",
@@ -17,13 +17,13 @@
   },
   "dependencies": {
     "@tencentcloud/chat": "latest",
-    "@tencentcloud/tuiroom-engine-electron": "2.4.0-alpha.4",
+    "@tencentcloud/tuiroom-engine-electron": "^2.7.0",
     "core-js": "^3.36.1",
+    "movable-resizable-js": "^0.2.0",
     "pinia": "^2.1.7",
     "trtc-electron-plugin-xmagic": "^0.0.16",
-    "trtc-electron-sdk": "11.8.603-alpha.1",
+    "trtc-electron-sdk": "^12.2.701",
     "vue": "^3.4.21",
-    "vue-i18n": "^9.10.2",
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
@@ -38,7 +38,7 @@
     "@vue/eslint-config-typescript": "^9.1.0",
     "axios": "^1.6.8",
     "concurrently": "^8.2.2",
-    "electron": "^24.8.8",
+    "electron": "^12.0.1",
     "electron-builder": "^24.13.3",
     "electron-devtools-installer": "^3.2.0",
     "eslint": "^7.32.0",
@@ -50,5 +50,10 @@
     "request": "^2.88.2",
     "sass": "^1.72.0",
     "sass-loader": "^12.6.0"
+  },
+  "overrides": {
+    "@tencentcloud/tuiroom-engine-electron": {
+      "trtc-electron-sdk": "$trtc-electron-sdk"
+    }
   }
 }
