--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
   },
   "dependencies": {
     "@tencentcloud/tuiroom-engine-electron": "~3.4.2",
+    "@tencentcloud/uikit-base-component-vue3": "workspace:*",
     "core-js": "^3.36.1",
     "movable-resizable-js": "^0.2.0",
     "pinia": "^2.1.7",
     "trtc-electron-plugin-xmagic": "^0.0.20",
-    "trtc-electron-sdk": "^12.8.707-alpha.4",
+    "trtc-electron-sdk": "12.8.707-alpha.6",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
