--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "dependencies": {
     "@tencentcloud/tuiroom-engine-electron": "~3.4.2",
-    "@tencentcloud/uikit-base-component-vue3": "workspace:*",
+    "@tencentcloud/uikit-base-component-vue3": "^1.0.0",
     "core-js": "^3.36.1",
     "movable-resizable-js": "^0.2.0",
     "pinia": "^2.1.7",
